--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-  <title>p3-electron</title>
-  <meta name="description" content="p3-electron description">
+  <title>Pathfinder</title>
+  <meta name="description" content="Pathfinder">
 
   <!-- Needed if not loading page from app://./index.html -->
   <base href="app://./" />
